sample/fails/x2020_08_03_15_26_35_976_6619006.smt2
; --full-saturate-quant --inst-when=full-last-call --inst-no-entail --term-db-mode=relevant --multi-trigger-linear --no-statistics --random-seed=1 --lang=smt2 --continued-execution --tlimit 30000
(set-option :produce-unsat-cores true)
(set-logic AUFLIA)
(declare-sort Nat$ 0)
(declare-sort S_v_tm$ 0)
(declare-sort S_enat_fun$ 0)
(declare-sort V_enat_fun$ 0)
(declare-sort V_s_set_fun$ 0)
(declare-sort S_hmultiset_fun$ 0)
(declare-sort S_s_bool_fun_fun$ 0)
(declare-sort S_nat_hmultiset_fun_fun$ 0)
(declare-sort S_s_v_tm_s_v_tm_bool_fun_fun_s_v_tm_list_s_v_tm_list_bool_fun_fun_fun_fun$ 0)
(declare-fun s$ () S_v_tm$)
(declare-fun t$ () S_v_tm$)
(declare-fun gt$ (V_s_set_fun$ S_s_bool_fun_fun$ Nat$ S_s_v_tm_s_v_tm_bool_fun_fun_s_v_tm_list_s_v_tm_list_bool_fun_fun_fun_fun$ S_enat_fun$ S_hmultiset_fun$ S_nat_hmultiset_fun_fun$ S_v_tm$ S_v_tm$) Bool)
(declare-fun extf$ () S_s_v_tm_s_v_tm_bool_fun_fun_s_v_tm_list_s_v_tm_list_bool_fun_fun_fun_fun$)
(declare-fun wary$ (S_enat_fun$ V_enat_fun$ S_v_tm$) Bool)
(declare-fun delta$ () Nat$)
(declare-fun gt_sym$ () S_s_bool_fun_fun$)
(declare-fun wt_sym$ () S_hmultiset_fun$)
(declare-fun coef_sym$ () S_nat_hmultiset_fun_fun$)
(declare-fun arity_sym$ () S_enat_fun$)
(declare-fun arity_var$ () V_enat_fun$)
(declare-fun ground_heads_var$ () V_s_set_fun$)
(assert (! (not (not (gt$ ground_heads_var$ gt_sym$ delta$ extf$ arity_sym$ wt_sym$ coef_sym$ s$ t$))) :named a0))
(assert (! (wary$ arity_sym$ arity_var$ s$) :named a1))
(assert (! (wary$ arity_sym$ arity_var$ t$) :named a2))
(assert (! (gt$ ground_heads_var$ gt_sym$ delta$ extf$ arity_sym$ wt_sym$ coef_sym$ t$ s$) :named a3))
(assert (! (forall ((?v0 S_v_tm$)) (=> (wary$ arity_sym$ arity_var$ ?v0) (not (gt$ ground_heads_var$ gt_sym$ delta$ extf$ arity_sym$ wt_sym$ coef_sym$ ?v0 ?v0)))) :named a4))
(assert (! (forall ((?v0 S_v_tm$) (?v1 S_v_tm$) (?v2 S_v_tm$)) (=> (and (wary$ arity_sym$ arity_var$ ?v0) (and (wary$ arity_sym$ arity_var$ ?v1) (and (wary$ arity_sym$ arity_var$ ?v2) (and (gt$ ground_heads_var$ gt_sym$ delta$ extf$ arity_sym$ wt_sym$ coef_sym$ ?v0 ?v1) (gt$ ground_heads_var$ gt_sym$ delta$ extf$ arity_sym$ wt_sym$ coef_sym$ ?v1 ?v2))))) (gt$ ground_heads_var$ gt_sym$ delta$ extf$ arity_sym$ wt_sym$ coef_sym$ ?v0 ?v2))) :named a5))
(check-sat)
